test: exercise null constraint argument validation